<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/bg_pill">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:layout_weight="2">
    </LinearLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="24">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/img_width_height"
                android:layout_height="@dimen/img_width_height"
                android:src="@drawable/pill13"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/slide_2_title"
                            android:textColor="@color/pill_title"
                            android:textSize="@dimen/slide_title"
                            android:textStyle="bold" />
                        <ImageView
                            android:src="@drawable/meal_after"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:onClick="viewAfterMeal"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="@dimen/desc_padding"
                        android:paddingRight="@dimen/desc_padding"
                        android:text="@string/slide_2_desc"
                        android:textColor="@color/pill_content"
                        android:textSize="@dimen/slide_desc" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="@dimen/desc_padding"
                        android:paddingRight="@dimen/desc_padding"
                        android:text="@string/slide_2_cont"
                        android:textColor="@color/pill_content"
                        android:textSize="@dimen/slide_desc" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>