<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_pill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/games_cube"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Hry"
                android:textColor="@color/dot_light"
                android:textSize="30dp"
                android:layout_margin="10dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:alpha=".5"
            android:background="@color/dot_light" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pexeso"
                        android:textColor="@color/purple"
                        android:layout_margin="15dp"
                        android:textSize="@dimen/slide_title"
                        android:textStyle="bold"
                        android:id="@+id/btn_pexeso"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".5"
                        android:background="@color/dot_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/melodies"
                        android:textColor="@color/purple"
                        android:layout_margin="15dp"
                        android:textSize="@dimen/slide_title"
                        android:textStyle="bold"
                        android:id="@+id/btn_concentration"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".5"
                        android:background="@color/dot_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hangman"
                        android:textColor="@color/purple"
                        android:layout_margin="15dp"
                        android:textSize="@dimen/slide_title"
                        android:textStyle="bold"
                        android:id="@+id/btn_hangman"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".5"
                        android:background="@color/dot_light" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>