<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/activity_main"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="16dp"
	tools:context="com.matsem.pripomienkovac.MainActivity">
	<!--Zaciatok hlavnej obrazovky-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true">

		<!--Zaciatok hlavneho menu-->
		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="8"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<!--Zaciatok prveho riadku hlavneho menu 2 Frame layouts-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal"
				android:layout_weight="1">

				<FrameLayout
					android:id="@+id/btn_main_1"
					android:layout_weight="1"
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@color/bg_screen1"
					android:layout_margin="5dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal">

							<ImageView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginRight="10dp"
								android:src="@drawable/morning"/>
							<TextView
								android:layout_width="wrap_content"
								android:textColor="@color/white"
								android:textSize="30dp"
								android:layout_height="wrap_content"
								android:text="@string/btn_morning"/>

						</LinearLayout>
						<LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:orientation="vertical">

							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:orientation="horizontal">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_before"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill1"/>


							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:orientation="horizontal">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_with"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill12"/>

							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_after"/>

								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/no_pill"
									android:visibility="invisible"/>


							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								<!--to center-->
								<ImageView
									android:layout_width="0dp"
									android:layout_height="0dp"
									android:layout_margin="5dp"
									android:src="@drawable/no_pill"/>

								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill3"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill4"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill14"/>

							</LinearLayout>
						</LinearLayout>

					</LinearLayout>
				</FrameLayout>

				<FrameLayout
					android:id="@+id/btn_main_2"
					android:layout_weight="1"
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@color/bg_screen2"
					android:layout_margin="5dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal">

							<ImageView
								android:layout_width="wrap_content"
								android:layout_marginRight="10dp"
								android:layout_height="wrap_content"
								android:src="@drawable/noon"/>
							<TextView
								android:layout_width="wrap_content"
								android:textColor="@color/white"
								android:textSize="30dp"
								android:layout_height="wrap_content"
								android:text="@string/btn_noon"/>

						</LinearLayout>

						<LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:orientation="vertical">

							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:orientation="horizontal">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_before"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/no_pill"
									android:visibility="invisible"/>


							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:orientation="horizontal">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_with"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill5"/>

							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_after"/>


								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill8"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill13"/>

							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								<!--to center-->
								<ImageView
									android:layout_width="0dp"
									android:layout_height="0dp"
									android:layout_margin="5dp"
									android:src="@drawable/no_pill"/>



							</LinearLayout>
						</LinearLayout>
					</LinearLayout>

				</FrameLayout>
			</LinearLayout>

			<!--Zaciatok druheho riadku hlavneho menu 2 Frame layouts-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal"
				android:layout_weight="1">

				<FrameLayout
					android:id="@+id/btn_main_3"
					android:layout_weight="1"
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@color/bg_screen3"
					android:layout_margin="5dp">
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">

						<LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:orientation="horizontal">

							<ImageView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginRight="10dp"
								android:src="@drawable/afternoon"/>
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="30dp"
								android:textColor="@color/white"
								android:text="@string/btn_afternoon"/>

						</LinearLayout>
						<LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:orientation="vertical">

							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:orientation="horizontal">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_before"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill1"/>

							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:orientation="horizontal">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_with"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill6"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill7"/>
								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill12"/>


							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_after"/>

								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill11"/>


							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								<!--to center-->
								<ImageView
									android:layout_width="0dp"
									android:layout_height="0dp"
									android:layout_margin="5dp"
									android:src="@drawable/no_pill"/>

								<ImageView
									android:layout_width="10dp"
									android:layout_height="10dp"
									android:layout_margin="5dp"
									android:src="@drawable/pill2"/>


							</LinearLayout>
						</LinearLayout>
					</LinearLayout>
				</FrameLayout>

				<FrameLayout
					android:id="@+id/btn_main_4"
					android:layout_weight="1"
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@color/bg_screen4"
					android:layout_margin="5dp">
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:orientation="horizontal">

							<ImageView
								android:layout_width="wrap_content"
								android:layout_height="match_parent"
								android:layout_marginRight="10dp"
								android:src="@drawable/night"/>
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="30dp"
								android:textColor="@color/white"
								android:text="@string/btn_night"/>

						</LinearLayout>
						<LinearLayout
							android:layout_width="wrap_content"
							android:layout_weight="4"
							android:layout_height="match_parent"
							android:orientation="vertical">

							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:orientation="horizontal"
								android:layout_weight="1">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_before"/>
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:layout_margin="5dp"
									android:src="@drawable/no_pill"
									android:visibility="invisible"/>

							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:orientation="horizontal"
								android:layout_weight="1">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_with"/>
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:layout_margin="5dp"
									android:src="@drawable/no_pill"
									android:visibility="invisible"/>

							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1">
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:src="@drawable/meal_after"/>

								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:layout_margin="5dp"
									android:src="@drawable/no_pill"
									android:visibility="invisible"/>

							</LinearLayout>
							<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:alpha=".5"
								android:background="@android:color/white" />
							<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1">
								<!--to center-->
								<ImageView
									android:layout_width="0dp"
									android:layout_height="0dp"
									android:layout_margin="5dp"
									android:src="@drawable/no_pill"/>

								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:layout_margin="5dp"
									android:src="@drawable/pill9"/>
								<ImageView
									android:layout_width="wrap_content"
									android:layout_height="match_parent"
									android:layout_margin="5dp"
									android:src="@drawable/pill10"/>

							</LinearLayout>
						</LinearLayout>
					</LinearLayout>
				</FrameLayout>
			</LinearLayout>

		</LinearLayout>
		<!--Koniec hlavneho menu-->
		<!--Zaciatok praveho menu-->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">

			<FrameLayout
				android:id="@+id/podium"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="5dp">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:src="@drawable/podium"/>

			</FrameLayout>

			<FrameLayout
				android:id="@+id/games"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="5dp">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:src="@drawable/games_cube"/>

			</FrameLayout>

			<FrameLayout
				android:id="@+id/church"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="5dp">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:src="@drawable/church"/>

			</FrameLayout>
		</LinearLayout>
		<!--Koniec praveho menu-->
	</LinearLayout>
	<!--Koniec hlavnej obrazovky-->
</RelativeLayout>
